# india-rx-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  claude-desktop-setup.md
docs/superpowers/plans/: 2026-05-22-india-rx-mcp.md
docs/superpowers/specs/: 2026-05-21-india-rx-mcp-design.md
src/india_rx_mcp/: cli.py  formatting.py  refresh.py  server.py
src/india_rx_mcp/cache/: db.py  models.py  repo.py
src/india_rx_mcp/prompts/: workflows.py
src/india_rx_mcp/resources/: catalogs.py
src/india_rx_mcp/scrapers/: cdsco_scraper.py  nppa_scraper.py
src/india_rx_mcp/services/: approvals_service.py  pricing_service.py
src/india_rx_mcp/tools/: cdsco_tools.py  nppa_tools.py
tests/: test_cache_db.py  test_cache_models.py  test_cache_repo.py  test_cdsco_scraper.py  test_cdsco_tools.py  test_cli.py  test_e2e_server.py  test_formatting.py  test_nppa_scraper.py  test_nppa_tools.py  test_prompts.py  test_refresh.py  test_resources.py  test_server.py  test_services.py  test_smoke.py
tests/fixtures/cdsco/: approved_new_drugs_index.html
